--- a/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
+++ b/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
@@ -119,18 +119,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DualParameterController.xaml.cs">
-      <DependentUpon>DualParameterController.xaml</DependentUpon>
-    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SingleParameterController\Model\SingleParameterModel.cs" />
-    <Compile Include="SingleParameterController\View\SingleParameterController.xaml.cs">
+    <Compile Include="SingleParameterController\SingleParameterController.xaml.cs">
       <DependentUpon>SingleParameterController.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SingleParameterController\ViewModel\SingleParametersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -153,15 +148,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="DualParameterController.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SingleParameterController\View\SingleParameterController.xaml">
+    <Page Include="SingleParameterController\SingleParameterController.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
