--- a/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
+++ b/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
@@ -123,8 +123,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SingleParameterController\SingleParameterController.xaml.cs">
-      <DependentUpon>SingleParameterController.xaml</DependentUpon>
+    <Compile Include="ParameterController\ParameterController.xaml.cs">
+      <DependentUpon>ParameterController.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -152,7 +152,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="SingleParameterController\SingleParameterController.xaml">
+    <Page Include="ParameterController\ParameterController.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
