--- a/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
+++ b/ChaliceECMOSimulator/ChaliceECMOSimulator.csproj
@@ -122,6 +122,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ParameterGraph\ParameterGraph.xaml.cs">
+      <DependentUpon>ParameterGraph.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParameterController\ParameterController.xaml.cs">
       <DependentUpon>ParameterController.xaml</DependentUpon>
@@ -156,10 +159,20 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ParameterGraph\ParameterGraph.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.68.0</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Views">
+      <Version>1.68.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
